# xarray-eop

./: .buildinfo  .gitignore  .gitlab-ci.yml  .hadolint.yml  .mypy.ini  .pre-commit-config.yaml  README.md  api.html  bandit.yml  check.ipynb  check_EOPFAlex.ipynb  check_MSIL1C.ipynb  check_MSIL1C_EOPFAlex.ipynb  check_OLCEFR.ipynb  check_OLCEFR_xarray.ipynb  check_OLCEFR_xarray_onthecloud.ipynb  check_OLCERR.ipynb  check_OLCLFR.ipynb  check_SLSFRP.ipynb  check_SLSFRP_onthecloud.ipynb  check_SLSLST.ipynb  check_SLSRBT.ipynb  check_SLSRBT_xarray.ipynb  check_SLSRBT_xarray_onthecloud.ipynb  check_SYNAOD.ipynb  check_SYNAOD_onthecloud.ipynb  check_SYNVGS_onthecloud.ipynb  check_SYNVGT.ipynb  convert.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.py  tutorial.html  tutorial_s3.ipynb  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  tutorial.doctree  usage.doctree
.doctrees/notebooks/: example_call_compare.doctree  tutorial_open_SAFE.doctree  tutorial_open_Zarr.doctree
.github/workflows/: docs.yaml  main.yml
_sources/: api.rst  index.rst  tutorial.rst  usage.rst
_sources/notebooks/: example_call_compare.ipynb  tutorial_open_SAFE.ipynb  tutorial_open_Zarr.ipynb
conf/mappings/: S1SIWRAW_mapping.json  S1SSMRAW_mapping.json  S1SWVRAW_mapping.json  S1_L1_GRH_mapping.json  S1_OCN_SM_mapping.json  S2_MSIL2A_mapping.json  S3ALTL0_mapping.json  S3OLCERR_mapping.json  S3OLCL0_mapping.json  S3SLSFRP_mapping.json  S3SLSL0_mapping.json  S3SYNAOD_mapping.json  S3SYNV10_mapping.json  S3SYNVG1_mapping.json  S3SYNVGK_mapping.json  S3SYNVGP_mapping.json  S3_SL_1_RBT_mapping.json  S3_SL_2_LST_mapping.json  S3_SR_1_SRA_BS_mapping.json  S3_SY_2_SYN_mapping.json  remap.json
conf/simplified_mappings/: S3OLCERR_mapping.json  S3SYNAOD_mapping.json  S3SYNV10_mapping.json  S3SYNVG1_mapping.json  S3SYNVGP_mapping.json  S3_OL_1_mapping.json  S3_OL_2_mapping.json  S3_SL_1_RBT_mapping.json
conf/simplified_mappings/ref/: S3OLCERR_mapping.json  S3_OL_1_mapping.json  S3_SL_1_RBT_mapping.json
docs/source/: api.rst  conf.py  index.rst  tutorial.rst  usage.rst
docs/source/notebooks/: example_call_compare.ipynb  tutorial_open_SAFE.ipynb  tutorial_open_Zarr.ipynb
notebooks/: check_MSIL1C.ipynb  check_MSIL2A.ipynb  check_OLCEFR.ipynb  check_SLSFRP_onthecloud.ipynb  check_SLSRBT.ipynb  check_SYNAOD_onthecloud.ipynb  check_SYNSDR.ipynb  check_SYNVGS.ipynb  check_SYNVGS_onthecloud.ipynb  check_all_products_onthecloud.ipynb  datatree_to_uml.ipynb  example_call_compare.html  test_datatree.ipynb  tutorial_open_SAFE.html  tutorial_open_Zarr.html
tests/it/: test_datatree.py
tests/ut/: test_compare.py  test_credentials.py  test_eopath.py  test_loader_tree_data.py  test_utils.py  test_xarray_backends.py
tests/ut/data/S03SLSRBT_test.zarr/: .zmetadata
tests/ut/data/S3B_OL_1_ERR_sample.SEN3/: instrument_data.nc  instrument_data_resampled.nc  xfdumanifest.xml
tests/ut/data/sample.zarr/: .zattrs  .zmetadata
xarray_eop/: __init__.py  api.py  credentials.py  eop.py  path.py  sentinel3.py  utils.py  xarray_backends.py
xarray_eop/conversion/: S3__OL1.py  S3__OL2.py  S3__SL1.py  S3__SL2.py  S3__SL2FRP.py  S3__SY2.py  S3__SY2AOD.py  check_adf.ipynb  check_adf_sample.ipynb  convert.py  update_attrs.py  utils.py
xarray_eop/conversion/conf/attributes/: attrs_S03OLCEFR  attrs_S03OLCEFRnew  attrs_S03OLCERR  attrs_S03OLCERRnew  attrs_S03OLCLFR  attrs_S03OLCLFRnew  attrs_S03SLSFRP  attrs_S03SLSFRPnew  attrs_S03SLSLST  attrs_S03SLSLSTnew  attrs_S03SLSRBT  attrs_S03SLSRBTnew  attrs_S03SYNAOD  attrs_S03SYNAODnew  (+9 more)
xarray_eop/verification/: cli_compare.py  compare.py  logger.py
xarray_safe/: sentinel3.py  utils.py  xarray_backends.py
(+79 files in other folders)
