[project]
name = "xarray-eop"
authors = [{"name" = "Vincent Levasseur"}]
dynamic = ["version"]
readme = "README.md"
description = "Xarray backends to read Sentinel products (SAFE and zarr formats)"
requires-python = ">=3.11"
dependencies = [
    "dask",
    "fsspec",
    "matplotlib",
    "netcdf4",
    "scipy",
    "xarray >= 2023.10.1",
    "xarray-datatree >= 0.0.14",
    "zarr",
]
license = {file = "LICENSE"}

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "setuptools_scm[toml]>=7.0",
    "check-manifest"
]

[tool.setuptools_scm]
write_to = "xarray_eop/_version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''

[tool.flit.sdist]
exclude = ["conf/"]

[tool.setuptools.packages.find]
exclude = ["conf/"]

[project.entry-points."xarray.backends"]
sentinel-3 = "xarray_eop.xarray_backends:Sentinel3Backend"
eop = "xarray_eop.xarray_backends:EOPBackend"
